<resources>
    <string name="mx_app_name">敏行</string>
    <string name="mx_mail_box_name">敏邮</string>
    <string name="mx_system_tip">系统提示</string>
    <string name="mx_ok">确定</string>
    <string name="mx_ok_number">确定(%d)</string>
    <string name="mx_cancel">取消</string>
    <string name="mx_message">敏信</string>
    <string name="mx_work_circles">工作圈</string>
    <string name="mx_app_center">我的应用</string>
    <string name="mx_contact">通讯录</string>
    <string name="mx_conversation_at_person">选择提醒的人</string>
    <string name="mx_contact_choice">选择人员</string>
    <string name="mx_top_right_add_contact">添加联系人</string>
    <string name="mx_top_right_circle_message">发布消息</string>
    <string name="mx_setting_change_password">修改密码</string>
    <string name="mx_more">我</string>
    <string name="mx_xlistview_header_hint_normal">下拉可以刷新</string>
    <string name="mx_xlistview_header_hint_ready">松开即可刷新</string>
    <string name="mx_xlistview_header_hint_loading">加载中...</string>
    <string name="mx_xlistview_header_last_time">最新更新:</string>
    <string name="mx_xlistview_footer_hint_normal">更多...</string>
    <string name="mx_xlistview_footer_hint_ready">松开载入更多</string>
    <string name="mx_view_more_reply">其他%d条回复>></string>
    <string name="mx_vote">投票</string>
    <string name="mx_vote_modify">更改选择</string>
    <string name="mx_vote_back">返回</string>
    <string name="mx_ballot_count">已有%s人投票</string>
    <string name="mx_vote_countdown">投票结束时间：%s</string>
    <string name="mx_vote_startup">投票开始时间：%s</string>
    <string name="mx_vote_countdown_closed">该投票已结束</string>
    <string name="mx_is_voted">已投票</string>
    <string name="mx_modify">修改</string>
    <string name="mx_view_vote_result">查看投票结果</string>
    <string name="mx_task_completed_count_str">\u0020\u0020有%s个任务已完成</string>
    <string name="mx_unknow">未设</string>
    <string name="mx_modify_selected">更改选择</string>
    <string name="mx_confirm_now">现在报名</string>
    <string name="mx_request_in">加入</string>
    <string name="mx_circle_action_button_join">参加</string>
    <string name="mx_circle_action_button_unjoin">不参加</string>
    <string name="mx_circle_action_button_uncertainty">不确定</string>
    <string name="mx_r_u_sure_join">您要参加这个活动吗？</string>
    <string name="mx_r_u_sure_join_expired">该活动报名已截止</string>
    <string name="mx_join_count">参加的成员(%s)</string>
    <string name="mx_unjoin_count">不参加的成员(%s)</string>
    <string name="mx_uncertainty_count">不确定的成员(%s)</string>
    <string name="mx_sendto">发送至</string>
    <string name="mx_send">发送</string>
    <string name="mx_send_empty_alert">不能发送空白消息</string>
    <string name="mx_at_current_group">当前工作圈所有人</string>
    <string name="mx_plx_input_action_theme">请输入活动主题</string>
    <string name="mx_plx_input_task_theme">请输入任务主题</string>
    <string name="mx_plx_input_action_location">请输入活动地点</string>
    <string name="mx_plx_input_action_content">请输入活动内容</string>
    <string name="mx_plx_input_task_content">请输入任务项</string>
    <string name="mx_start">开始时间</string>
    <string name="mx_end">结束时间</string>
    <string name="mx_action_confirm_date">报名截止时间</string>
    <string name="mx_poll_confirm_date">截止时间</string>
    <string name="mx_poll_start_date">开始时间</string>
    <string name="mx_poll_allow_change">投票后修改选择</string>
    <string name="mx_poll_allow_look_result">投票结束前查看投票结果</string>
    <string name="mx_poll_type">投票类型</string>
    <string name="mx_poll_most_option">最多选择几项</string>
    <string name="mx_poll_least_option">最少选择几项</string>
    <string name="mx_poll_option_no_limit">不限制</string>
    <string name="mx_poll_multi_select">多选</string>
    <string name="mx_poll_the_radio">单选</string>
    <string name="mx_poll_is_allow_change">允许</string>
    <string name="mx_poll_not_allow_change">不允许</string>
    <string name="mx_poll_default_start_time">当前时间</string>
    <string name="mx_plx_selected_date">请选择日期</string>
    <string name="mx_task_option">任务项</string>
    <string name="mx_click_add">添加</string>
    <string name="mx_director">负责人</string>
    <string name="mx_completed_date">完成时间</string>
    <string name="mx_unmake">未分配</string>
    <string name="mx_new_single_task_item">创建任务项</string>
    <string name="mx_new_single_poll_item">创建投票项</string>
    <string name="mx_ask_delete_task_option">确定删除该任务项？</string>
    <string name="mx_ask_delete_poll_option">确定删除该投票项？</string>
    <string name="mx_ask_delete_attachment">确定删除该附件？</string>
    <string name="mx_plx_input_poll_theme">请输入投票主题</string>
    <string name="mx_plx_input_poll_item">请输入投票项</string>
    <string name="mx_poll_option">投票项</string>
    <string name="mx_net_list">外部社区列表</string>
    <string name="mx_pending">待审核</string>
    <string name="mx_view_group_list">更多工作圈</string>
    <string name="mx_group_all_circle">所有工作圈</string>
    <string name="mx_group_my_circle">我的工作圈</string>
    <string name="mx_edit_message_action">编辑活动</string>
    <string name="mx_edit_message_task">编辑任务</string>
    <string name="mx_plx_input_reply_content">请输入回复内容</string>
    <string name="mx_reply">回复</string>
    <string name="mx_share_message">分享消息</string>
    <string name="mx_share_message_hint">关于消息想说点啥</string>
    <string name="mx_share">分享</string>
    <string name="mx_forward">转发</string>
    <string name="mx_agree">同意</string>
    <string name="mx_refuse">拒绝</string>
    <string name="mx_upload">上传</string>
    <string name="mx_group_list">工作圈列表</string>
    <string name="mx_downloaded_file">我下载的文件</string>
    <string name="mx_about">关于</string>
    <string name="mx_message_detail">消息正文</string>
    <string name="mx_onlinefile">在线文件</string>
    <string name="mx_all_task">所有任务</string>
    <string name="mx_minxing_info">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020敏行是由北京德惠众合信息技术有限公司开发的基于SNS的企业沟通与分享平台、协同办公平台，帮助企业实现跨越地域、部门、内容、业务应用的高效沟通与协同。</string>
    <string name="mx_goto_minxing_website">访问敏行官方网站</string>
    <string name="mx_head">头像：</string>
    <string name="mx_qr_code">二维码：</string>
    <string name="mx_save">保存</string>
    <string name="mx_delete">删除</string>
    <string name="mx_cancel_topic">取消</string>
    <string name="mx_close">关闭</string>
    <string name="mx_quit">退出</string>
    <string name="mx_plx_select_uploadfile_type">请选择上传文件类型</string>
    <string name="mx_are_u_sure_download_the_file">确定下载此文件?</string>
    <string name="mx_service_contact">公众号</string>
    <string name="mx_all_person_contact">公司通讯录</string>
    <string name="mx_multi_chat">群聊</string>
    <string name="mx_vip_contact">特别关注</string>
    <string name="mx_btn_chat_unread">%d条新消息</string>
    <string name="mx_send_sms">\u0020发消息</string>
    <string name="mx_add_vip">\u0020特别关注</string>
    <string name="mx_delete_vip">\u0020取消关注</string>
    <string name="mx_default_dept_root">江苏公司</string>
    <string name="mx_search_by_name">按姓名查找</string>
    <string name="mx_search_public">添加公众号</string>
    <string name="mx_str_tittle_add_app">添加应用</string>
    <string name="mx_contact_list_search_hint">姓名/拼音</string>
    <string name="mx_conversation_all_user_list_search_hint">姓名/拼音</string>
    <string name="mx_file_selected_search_hint">文件名称</string>
    <string name="mx_contact_search_account_hint">手机号</string>
    <string name="mx_search">查找</string>
    <string name="mx_open">打开</string>
    <string name="mx_open_ocu">进入公众号</string>
    <string name="mx_redownload">重新下载</string>
    <string name="mx_search_mobile">搜号码</string>
    <string name="mx_search_name">搜姓名</string>
    <string name="mx_function_label">功能介绍</string>
    <string name="mx_to_be_add_apps">全部应用</string>
    <string name="mx_add_person_to_personal_contact">\u0020加为联系人</string>
    <string name="mx_delete_person_to_personal_contact">\u0020删除联系人</string>
    <string name="mx_add_star_to_personal_contact">订阅</string>
    <string name="mx_delete_star_to_personal_contact">取消订阅</string>
    <string name="mx_ask_delete_star">是否取消订阅？</string>
    <string name="mx_ask_uninstall_app">确定移除应用么？</string>
    <string name="mx_ask_delete_person">是否从个人通讯录中删除此人？</string>
    <string name="mx_ask_delete_vip">是否从特别关注中删除此人？</string>
    <string name="mx_ask_add_department_title">添加该部门同事至联系人</string>
    <string name="mx_ask_add_department_message">若部门人数较多，可能需要较长时间与流量下载。</string>
    <string name="mx_ask_delete_multi_conversation">是否从通讯录删除此群聊？</string>
    <string name="mx_ask_delete_conversation">删除该聊天</string>
    <string name="mx_ask_top_conversation">置顶聊天</string>
    <string name="mx_ask_untop_conversation">取消置顶</string>
    <string name="mx_more_current_account_info">个人信息</string>
    <string name="mx_app_panel_item_expression">表情</string>
    <string name="mx_app_panel_item_picture">图片</string>
    <string name="mx_app_panel_item_video">视频</string>
    <string name="mx_app_panel_item_contact_card">名片</string>
    <string name="mx_app_panel_item_red_pocket">红包</string>
    <string name="mx_app_panel_item_health_walking">应用消息</string>
    <string name="mx_videorecord_time_limit">还可录制%d秒</string>
    <string name="mx_ask_delete_record">该操作将丢弃之前已拍摄的视频</string>
    <string name="mx_message_setting_title">聊天信息</string>
    <string name="mx_message_setting_vip">特别关注成员</string>
    <string name="mx_conversation_file_image_title">聊天文件与图片</string>
    <string name="mx_message_setting_title_private">聊天信息</string>
    <string name="mx_message_setting_change_title">群聊名称</string>
    <string name="mx_message_setting_qrcode_title">群聊二维码</string>
    <string name="mx_message_setting_change_top">置顶聊天</string>
    <string name="mx_message_setting_enter">进入聊天</string>
    <string name="mx_message_setting_alluser_label">全部群成员(%d)</string>
    <string name="mx_message_setting_alluser_title">群聊成员(%d)</string>
    <string name="mx_message_setting_alluser_ask_delete">是否从群聊中删除此人？</string>
    <string name="mx_conversation_multi_title_label">群聊</string>
    <string name="mx_conversation_multi_title_detail">(%d)人</string>
    <string name="mx_work_circle_pop_my_message">我的消息</string>
    <string name="mx_work_circle_pop_my_favmessage">我的收藏</string>
    <string name="mx_work_circle_message_item_likecount">等%d人</string>
    <string name="mx_work_circle_message_item_like">赞</string>
    <string name="mx_work_circle_message_item_unlike">取消</string>
    <string name="mx_work_circle_message_item_fav">收藏</string>
    <string name="mx_work_circle_message_topics">话题列表</string>
    <string name="mx_work_circle_message_item_topic">添加话题</string>
    <string name="mx_work_circle_message_item_cancel_topic">取消话题</string>
    <string name="mx_work_circle_message_item_more">更多</string>
    <string name="mx_work_circle_message_fav">已收藏</string>
    <string name="mx_work_circle_message_unfav">已取消收藏</string>
    <string name="mx_work_circle_message_item_unfav">取消收藏</string>
    <string name="mx_work_circle_message_item_share">分享</string>
    <string name="mx_work_circle_message_item_reply">回复</string>
    <string name="mx_work_circle_task_mark">发布了一个任务</string>
    <string name="mx_work_circle_task_status_will_expire">即将过期</string>
    <string name="mx_work_circle_task_status_expired">已过期</string>
    <string name="mx_work_circle_task_expire_time">截止日期:\u0020\u0020</string>
    <string name="mx_work_circle_task_progress">任务进度:\u0020\u0020</string>
    <string name="mx_work_circle_task_complete_time_at">于</string>
    <string name="mx_work_circle_task_complete_time_complete">完成</string>
    <string name="mx_work_circle_task_complete_alert">是否确认完成此项任务？</string>
    <string name="mx_work_circle_action_mark">发起了一个活动</string>
    <string name="mx_settings_contacts_call_remind_enable">开启来电显示</string>
    <string name="mx_settings_contacts_call_remind_tips">开启来电显示将在有同事电话呼入时,根据公司通讯录显示同事的姓名、部门与职务。</string>
    <string name="mx_settings_contacts_call_remind_tips_permission">若开启来电显示功能，请同时在手机“设置”中为此应用开启悬浮窗口显示权限。</string>
    <string name="mx_toast_file">文件</string>
    <string name="mx_button_download">下载</string>
    <string name="mx_common_search">搜索</string>
    <string name="mx_fileorimage_image">图片</string>
</resources>